Added an automation script for sending game notifications

--- a/docs/emails/templates/email-game-announcement.html
+++ b/docs/emails/templates/email-game-announcement.html
@@ -496,10 +496,10 @@ ul.social li{
 	        <td class="bg_dark email-section" style="text-align:center;">
 	        	<div class="heading-section heading-section-white">
 	          	<h2>Mega Empires: The West - Game 14</h2>
-	          	<p>The next 9 player game of Mega Empires: The West is taking place Saturday, May 24, 2025. Spots will be first-come first-serve, with anyone signing beyond the 9 player limit considered an alternate if someone has to drop.</p>
+	          	<p>The next 9 player game of Mega Empires: The West is taking place Saturday, May 24, 2025. Spots will be first-come first-serve, with anyone signing up beyond the 9 player limit considered an alternate if someone has to drop.</p>
 				<p>Reserve your spot on the <a href="https://signup.torontomegaempires.com">Toronto Mega Empires Discord Event</a></p>
 				<p>Can't make it? Don't worry!</p>
-				<p>The Mini MegaCon Summer 25 18-player game is June 21st</p>
+				<p>The next game is November 27th.</p>
 	        	</div>
 	        </td>
 	      </tr><!-- end: tr -->
